# flinspect

./: .gitignore  README.md  environment.yml  module_dependency_analysis.ipynb  module_dependency_graph.ipynb  pyproject.toml  test.ipynb
flinspect/: explorer.py  gen_dependency_graph.py  ingest_parse_tree.py  node_registry.py  parse_forest.py  parse_node.py  parse_state.py  parse_tree.py  parse_tree_node.py  parse_tree_parser.py  utils.py  variable_info.py
notebooks/: explorer.ipynb  explorer_TIM.ipynb  module_dependency.ipynb  module_dependency_TIM.ipynb  module_dependency_graph.ipynb  module_dependency_graph_TIM.ipynb
tests/: test_parse_tree.py
tests/f90/: gen_ptree_files.sh  test_assumed_shape.f90  test_assumed_shape_ptree  test_func_ref_array.f90  test_func_ref_array_ptree  test_interface_basic.f90  test_interface_basic_ptree  test_interface_rank.f90  test_interface_rank_ptree  test_keyword_args.f90  test_keyword_args_ptree  test_optional_args.f90  test_optional_args_ptree  test_struct_component.f90  test_struct_component_ptree
