[project]
name = "flinspect"
version = "0.0.1"
authors = [
  { name = "Alper Altuntas, NCAR", email = "altuntas@ucar.edu" }
]
description = "A flang-based inspection tool for large Fortran HPC codebases"
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache 2.0 License",
  "Programming Language :: Python",
  "Framework :: Jupyter"
]
requires-python = ">=3.14,<3.15"
dependencies = [
  "ipykernel>=6.29,<6.30",
  "ipython>=8.2,<8.3",
  "jupyterlab>=4.0,<4.1",
  "jupyterlab_server>=2.25,<2.26",
  "PyYAML>=6.0,<6.1",
  "z3-solver>=4.12.3,<4.13",
  "networkx>=3.3,<3.4",
  "black>=24.1,<24.2",
  "ipycytoscape>=1.3,<1.4",
  "ipywidgets>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flinspect"]